--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
   <div id="chatIcon" class="chat-icon">
-    <img src="/Images of website /998bc565-31b5-4d9f-b065-7850967d1144.png" alt="Chat Icon"width="50" height="50">
+    <img src="https://raw.githubusercontent.com/Aggghhgff/Lola/main/998bc565-31b5-4d9f-b065-7850967d1144.png" alt="Chat Icon"width="50" height="50">
   </div>
   <div id="chatGuide" class="chat-guide">
     <!-- Chat guide content goes here -->
