--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
   <audio autoplay loop>
-    <source src="/sound of website /Legends-Never-Die.mp3" type="audio/mpeg">
+    <source src="Legends-Never-Die.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
