--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input type="text" id="searchInput" placeholder="Search...">
     </header>
     <main id="gameMods"></main>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 
     <div id="popup" class="popup">
         <div class="popup-content">
