--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
             50% {
                 background-color: #33FF57;
             }
+
+         }
+            60% {
+                background-color: #9e0dff;
+            }
+
+
+
+
+
+
             100% {
                 background-color: #5733FF;
             }
